--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ package_dir=
 include_package_data=True
 
 [options.packages.find]
-where=src
+where=pynix
 
 [options.entry_points]
 console_scripts =
